acmacs.r NEWS -- history of user-visible changes.

* Changes in 2.7
** R 3.5.1
** signle thread variant of the grid test
** remove all projections in the chart (chart$remove_all_projections())
** remove all projections except one in the chart (chart$remove_all_projections_except(number))
** get number of layers (chart$titers$number_of_layers)
** remove layers (flatten) (chart$remove_layers())
** clone chart (chart$clone())
** create new projection with random layout (dimension annealing cannot be used) (chart$new_projection("none", 2))
** projection$number_of_dimensions
** set layout of projection to matrix (projection$layout <- matrix(c(0), nrow=chart$number_of_points, ncol=projection$number_of_dimensions))

* Changes in 2.6 (2018-07-15)
** fixed bug in making procrustes between projections of the same chart


Local variables:
coding: utf-8
mode: outline
paragraph-separate: "[          ]*$"
end: